tests/fixtures/fail/raw_trap_safe.sali
let main(): i32 = {
  raw_trap()
}
